@@ -727,7 +727,8 @@ class TestWizardSave(testsuite.TestCase):
              '               version="%(version)s">\n'
              '      \n'
              '      <property name="decoder">ffdec_dvvideo</property>\n'
-             '      <property name="deinterlace-mode">tomsmocomp</property>\n'
+           '      <property name="deinterlace-method">tomsmocomp</property>\n'
+             '      <property name="deinterlace-mode">auto</property>\n'
              '      <property name="framerate">25/2</property>\n'
              '      <property name="height">480</property>\n'
              '      <property name="is-square">True</property>\n'
@@ -858,7 +859,8 @@ class TestWizardSave(testsuite.TestCase):
              '               version="%(version)s">\n'
              '      \n'
              '      <property name="decoder">ffdec_dvvideo</property>\n'
-             '      <property name="deinterlace-mode">tomsmocomp</property>\n'
+           '      <property name="deinterlace-method">tomsmocomp</property>\n'
+             '      <property name="deinterlace-mode">auto</property>\n'
              '      <property name="framerate">25/2</property>\n'
              '      <property name="height">480</property>\n'
              '      <property name="is-square">True</property>\n'
@@ -871,7 +873,8 @@ class TestWizardSave(testsuite.TestCase):
              '               version="%(version)s">\n'
              '      \n'
              '      <property name="decoder">ffdec_dvvideo</property>\n'
-             '      <property name="deinterlace-mode">tomsmocomp</property>\n'
+           '      <property name="deinterlace-method">tomsmocomp</property>\n'
+             '      <property name="deinterlace-mode">auto</property>\n'
              '      <property name="framerate">25/2</property>\n'
              '      <property name="height">480</property>\n'
              '      <property name="is-square">True</property>\n'
