@@ -1,5 +1,10 @@
 2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>
 
+	* flumotion/test/test_wizard_save.py:
+	Fix tests to work with the new default configuration
+
+2010-09-07  Xavier Queralt  <xqueralt@flumotion.com>
+
 	patch by: Hiroaki Kawai<kawai@iij.ad.jp>
 
 	* flumotion/component/producers/firewire/wizard_gtk.py:
